<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgcodee"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="350dp"
        android:src="@drawable/ic_code" />

    <RelativeLayout
        android:id="@+id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="100dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/applogoos" />

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:id="@+id/mainlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgg"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/logname"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/et11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt11"
                android:layout_marginTop="30dp"
                android:background="@drawable/outline"
                android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
                android:drawablePadding="5dp"
                android:hint="@string/usrhint"
                android:textColor="@color/black"
                android:textColorHint="@color/blac"
                android:paddingLeft="15dp" />

            <EditText
                android:id="@+id/et12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et11"
                android:layout_marginTop="10dp"
                android:background="@drawable/outline"
                android:drawableLeft="@drawable/ic_baseline_lock"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHint="@color/blac"
                android:paddingLeft="15dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mainBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et12"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="24dp"
                android:background="@drawable/gradient"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white" />


        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay1"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/forr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"

            android:text="@string/forget"
            android:textColor="@color/vio" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/register"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/regsterrr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/create"
                android:textColor="@color/vio" />

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>